[phonebook][fix] -  position mobile, tablet and windows

--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -8,3 +8,11 @@
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(206, 205, 205);
 }
+
+@media screen and (min-width: 768px) {
+  .appbar__item {
+    margin: 20px 0px;
+  }
+}
+@media screen and (min-width: 1280px) {
+}
